--- a/css/Sass/test1/styles.css
+++ b/css/Sass/test1/styles.css
@@ -3,4 +3,20 @@ header {
   color: #2c3e50;
   text-align: center;
   padding: 20px;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
+nav ul li {
+  margin-right: 20px;
+}
+nav ul li a {
+  text-decoration: none;
+  color: #3498db;
+}
+nav ul li a:hover {
+  color: #e74c3c;
 }/*# sourceMappingURL=styles.css.map */
