Angular Event Binding

--- a/angular/my-angular-app/src/app/app.component.html
+++ b/angular/my-angular-app/src/app/app.component.html
@@ -10,6 +10,10 @@
 </ul> -->
 
 <!-- Exercise 3: Conditional Rendering -->
-<button (click)="isLoggedIn = !isLoggedIn">Toggle Login</button>
+<!-- <button (click)="isLoggedIn = !isLoggedIn">Toggle Login</button>
 <p *ngIf="isLoggedIn">Welcome, User!</p>
-<p *ngIf="!isLoggedIn">Please log in.</p>
+<p *ngIf="!isLoggedIn">Please log in.</p> -->
+
+<!-- Exercise 4: Event Binding -->
+ <button (click)="increment()">Click me</button>
+ <p>Button clicked {{ counter }} times</p>
