Angular Parent-Child Communication

--- a/angular/my-angular-app/src/app/app.component.html
+++ b/angular/my-angular-app/src/app/app.component.html
@@ -17,3 +17,5 @@
 <!-- Exercise 4: Event Binding -->
  <button (click)="increment()">Click me</button>
  <p>Button clicked {{ counter }} times</p>
+
+ <app-parent></app-parent>
