Angular Custom Directive

--- a/angular/my-angular-app/src/app/app.component.html
+++ b/angular/my-angular-app/src/app/app.component.html
@@ -20,7 +20,7 @@
 
 
 <!-- Exercise 7: Reactive Forms -->
-<form [formGroup]="myForm" (ngSubmit)="submitForm()">
+<!-- <form [formGroup]="myForm" (ngSubmit)="submitForm()">
     <label>
         Name:
         <input formControlName="name">
@@ -30,8 +30,11 @@
         <input formControlName="email">
     </label>
     <button type="submit">Submit</button>
-</form>
+</form> -->
 
+<!-- Exercise 8: Custom Directive -->
+
+<p appHighlight>Hover over this text to see the highlight.</p>
 
  <app-parent></app-parent>
 
