--- a/angular/my-angular-app/src/app/app.component.html
+++ b/angular/my-angular-app/src/app/app.component.html
@@ -32,11 +32,14 @@
     <button type="submit">Submit</button>
 </form> -->
 
+<!-- <app-parent></app-parent>
+
+<app-first></app-first>
+<app-second></app-second> -->
+
 <!-- Exercise 8: Custom Directive -->
+<!-- <p appHighlight>Hover over this text to see the highlight.</p> -->
 
-<p appHighlight>Hover over this text to see the highlight.</p>
-
- <app-parent></app-parent>
-
- <app-first></app-first>
- <app-second></app-second>
+<!-- Use Pipes -->
+<p>Today's Date {{ today | date }}</p>
+<p>Price {{ price | currency }}</p>
