--- a/angular/my-angular-app/src/app/app.component.html
+++ b/angular/my-angular-app/src/app/app.component.html
@@ -40,6 +40,14 @@
 <!-- Exercise 8: Custom Directive -->
 <!-- <p appHighlight>Hover over this text to see the highlight.</p> -->
 
-<!-- Use Pipes -->
-<p>Today's Date {{ today | date }}</p>
-<p>Price {{ price | currency }}</p>
+<!-- Exercise 9: Use Pipes -->
+<!-- <p>Today's Date {{ today | date }}</p>
+<p>Price {{ price | currency }}</p> -->
+
+<!-- Exercise 10: Add Navigation -->
+
+<nav>
+    <a routerLink="/">Home</a>
+    <a routerLink="/about">About</a>
+</nav>
+<router-outlet></router-outlet>
